Don't show value for container treasures and fix container alignment

--- a/src/styles/actor/character/_inventory.scss
+++ b/src/styles/actor/character/_inventory.scss
@@ -9,7 +9,7 @@
         height: calc(100% - 60px);
     }
 
-    .inventory-list, .item-list {
+    .inventory-items {
         border: 1px solid var(--alt);
         border-top: none;
     }
